test/e2e/testdata/listenerset-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listener-httpsroute
  namespace: gateway-conformance-infra
spec:
  hostnames:
  - www.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    namespace: gateway-conformance-infra
    name: listener-set-http
    sectionName: extra-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listener-https
    backendRefs:
    - name: infra-backend-v1
      port: 8080
